[gd_scene load_steps=41 format=3 uid="uid://dtl61m7bvusg"]

[ext_resource type="Script" uid="uid://bs7yaq7gomar5" path="res://Enemy/Scripts/Dash_enemy.gd" id="1_tvo0k"]
[ext_resource type="PackedScene" uid="uid://dvpodtds0af3b" path="res://Enemy/Scenes/healing_hurt_box.tscn" id="2_6djl0"]
[ext_resource type="PackedScene" uid="uid://blqy1785xxrj" path="res://Components/Hitbox&Hurtbox Stuff/hurt_box.tscn" id="2_jpr3n"]
[ext_resource type="Script" uid="uid://yjwpqjr5cj1n" path="res://Components/hurt_component.gd" id="3_6djl0"]
[ext_resource type="PackedScene" uid="uid://dglegomtu41bg" path="res://Components/Hitbox&Hurtbox Stuff/hit_box.tscn" id="4_18mdo"]
[ext_resource type="Script" uid="uid://86uwh70cdq33" path="res://Components/health_component.gd" id="5_brb1q"]
[ext_resource type="Script" uid="uid://c8xnefd6fkw30" path="res://Visual Effects/particle_emitter.gd" id="6_jpr3n"]
[ext_resource type="PackedScene" uid="uid://dlm8am5bc47cs" path="res://Abilities/Scenes/movement_visualization.tscn" id="7_qou4v"]
[ext_resource type="PackedScene" uid="uid://c6v2s2m56205m" path="res://Enemy/Attack_Indicator/sprite_2d.tscn" id="8_0y8qy"]
[ext_resource type="Texture2D" uid="uid://ddp2p27qvl8b5" path="res://Assets/Enemy/Dash/1F.PNG" id="9_idvar"]
[ext_resource type="Texture2D" uid="uid://vyvyhradp17q" path="res://Assets/Enemy/Dash/2F.PNG" id="10_x26mw"]
[ext_resource type="AudioStream" uid="uid://c4rccwa2ohjdv" path="res://Assets/SFX/Enemy Death/Enemy-Hurt.wav" id="11_x26mw"]
[ext_resource type="AudioStream" uid="uid://uqsv4sx8acej" path="res://Assets/SFX/Default Buzz.wav" id="12_l630y"]
[ext_resource type="AudioStream" uid="uid://1hysghw8peim" path="res://Assets/SFX/Bee Spawn 2.wav" id="13_0y8qy"]
[ext_resource type="AudioStream" uid="uid://bffom1yyd3vad" path="res://Assets/SFX/Bee Spawn.wav" id="14_bgasx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tvo0k"]

[sub_resource type="Resource" id="Resource_bgasx"]
resource_local_to_scene = true
script = ExtResource("3_6djl0")
power = 10
metadata/_custom_type_script = "uid://yjwpqjr5cj1n"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6djl0"]
radius = 11.0
height = 32.0

[sub_resource type="Resource" id="Resource_3kh2t"]
resource_local_to_scene = true
script = ExtResource("5_brb1q")
health = 20
max_health = 20
metadata/_custom_type_script = "uid://86uwh70cdq33"

[sub_resource type="Resource" id="Resource_brb1q"]
script = ExtResource("6_jpr3n")
particle_color = Color(2.4065375e-06, 0.78313017, 0.28045723, 1)
metadata/_custom_type_script = "uid://c8xnefd6fkw30"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a3ece"]
radius = 11.0
height = 32.0

[sub_resource type="Animation" id="Animation_dulps"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_idvar")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_idvar"]
resource_name = "idle_left"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.016666666),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_idvar")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 2.5), Vector2(0, -2.5)]
}

[sub_resource type="Animation" id="Animation_nmu6k"]
resource_name = "idle_right"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_idvar")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 2.5), Vector2(0, -2.5)]
}

[sub_resource type="Animation" id="Animation_l630y"]
resource_name = "move"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("9_idvar"), ExtResource("10_x26mw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0y8qy"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("9_idvar"), ExtResource("10_x26mw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bgasx"]
_data = {
&"RESET": SubResource("Animation_dulps"),
&"idle_left": SubResource("Animation_idvar"),
&"idle_right": SubResource("Animation_nmu6k"),
&"move_left": SubResource("Animation_l630y"),
&"move_right": SubResource("Animation_0y8qy")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_idvar"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x26mw"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_idvar"]
blend_point_0/node = SubResource("AnimationNodeAnimation_idvar")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_x26mw")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dulps"]
animation = &"move_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nmu6k"]
animation = &"move_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_x26mw"]
blend_point_0/node = SubResource("AnimationNodeAnimation_dulps")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_nmu6k")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l630y"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0y8qy"]
advance_mode = 2
advance_expression = "velocity"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bgasx"]
advance_mode = 2
advance_expression = "!velocity"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dulps"]
states/Idle/node = SubResource("AnimationNodeBlendSpace1D_idvar")
states/Idle/position = Vector2(531, 38)
states/Move/node = SubResource("AnimationNodeBlendSpace1D_x26mw")
states/Move/position = Vector2(522, 125)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_l630y"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_0y8qy"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_bgasx")]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_l630y"]
random_pitch = 3.12
streams_count = 1
stream_0/stream = ExtResource("11_x26mw")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3bxy5"]
streams_count = 1
stream_0/stream = ExtResource("12_l630y")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rva1w"]
streams_count = 2
stream_0/stream = ExtResource("13_0y8qy")
stream_1/stream = ExtResource("14_bgasx")

[node name="dash_enemy" type="CharacterBody2D" node_paths=PackedStringArray("attack_waring", "hit_effect_player", "healthbar") groups=["enemy"]]
script = ExtResource("1_tvo0k")
attack_waring = NodePath("attack_warning")
hit_effect_player = NodePath("HitEffect")
healthbar = NodePath("HealthBar")
heal_hurtbox_scene = ExtResource("2_6djl0")
metadata/_custom_type_script = "uid://brj6c1kggd6lh"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_tvo0k")

[node name="HurtBox" parent="." node_paths=PackedStringArray("collision_shape2D") instance=ExtResource("2_jpr3n")]
collision_layer = 2
collision_mask = 0
hurt_component = SubResource("Resource_bgasx")
collision_shape2D = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_6djl0")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
avoidance_enabled = true
radius = 50.0
debug_path_custom_color = Color(0, 1, 1, 1)
debug_path_custom_line_width = 0.65

[node name="HitBox" parent="." node_paths=PackedStringArray("collision_shape2D", "node_to_kill") instance=ExtResource("4_18mdo")]
collision_layer = 0
collision_mask = 4
health_component = SubResource("Resource_3kh2t")
collision_shape2D = NodePath("CollisionShape2D")
hit_effect = SubResource("Resource_brb1q")
node_to_kill = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_a3ece")

[node name="DashTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -9.999998
offset_top = -20.999998
offset_right = 200.0
offset_bottom = 6.000002
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="attack_warning" parent="." instance=ExtResource("8_0y8qy")]
position = Vector2(-3.8146973e-06, -39)
scale = Vector2(0.052767586, 0.052767586)

[node name="DashVisRotationHelper" type="Node2D" parent="."]

[node name="DashVisualization" parent="DashVisRotationHelper" instance=ExtResource("7_qou4v")]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.065, 0.065)
texture = ExtResource("9_idvar")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_bgasx")
}

[node name="AnimationTree" type="AnimationTree" parent="Sprite2D"]
tree_root = SubResource("AnimationNodeStateMachine_dulps")
advance_expression_base_node = NodePath("../..")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = 0.0
parameters/Move/blend_position = -0.5888889

[node name="HitEffect" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_l630y")
volume_db = 4.039

[node name="Footsteps" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_3bxy5")
volume_db = -4.995
autoplay = true

[node name="Spawn" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_rva1w")

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
